# LiteFX-Template

./: CMakeLists.txt  README.md
src/: main.cpp  main.h
