CMAKE_MINIMUM_REQUIRED(VERSION 3.23)

PROJECT(MyApp LANGUAGES CXX)

# Setup build artifact directory.
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "$<1:${CMAKE_BINARY_DIR}/binaries/>")
 
SET(CMAKE_CXX_STANDARD 23)
FIND_PACKAGE(LiteFX CONFIG REQUIRED)
FIND_PACKAGE(glfw3 CONFIG REQUIRED)
 
ADD_EXECUTABLE(${PROJECT_NAME} "src/main.h" "src/main.cpp")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE LiteFX.Backends.Vulkan LiteFX.Backends.DirectX12 glfw)